--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,19 @@
+:root{
+  --marker-size:40px;
+  --matrix-primary:#22AA00;
+  --matrix-secondary:#77FF55;
+  --icon-pallet-a:#5887ff;
+  --icon-pallet-b:#58fff9;
+  --icon-pallet-c:#53FA00;
+  --icon-pallet-d:#dc7cff;
+  --icon-pallet-e:#5D00C7;
+  --icon-pallet-f:#ffd000;
+  --glass:#3333
+}
+
 html,
 body {
+  background-color: #333;
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
@@ -13,4 +27,196 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+h3{
+  text-align:center;
+  color:#228800
+}
+h2{
+  color: white;
+}
+h4{
+  margin-left: 10px;
+  font-weight: 500;
+}
+
+h5{
+  margin-left: 40px;
+  font-weight: 400;
+  
+}
+
+p{
+  color: var(--text);
+  padding:10px;
+  text-align: justify;
+  text-justify:inter-cluster;
+}
+
+.timeline_container{
+  position: absolute;
+  /* width:100vw; */
+  height:100vh;
+  overflow-y:scroll;
+}
+
+.stickyMask {
+  position: sticky;
+  top: -1px;
+  width:100%;
+  height:150px;
+  top:-2px;
+  margin-bottom:-150px;
+  z-index:7;
+  opacity: 0;
+  transition: opacity 0.3s;
+  
+}
+
+/* styles for when the header is in sticky mode */
+.stickyMask.is-pinned {
+  opacity: 100;
+  background-image: linear-gradient(white, white, #ffffff00);
+} 
+
+.socialBar{
+  text-align:center;
+  position:sticky;
+  top:10px;
+  z-index:5;
+  margin-bottom: 10px;
+}
+
+@media only screen and (max-width: 500px) {
+  /* html:not([data-scroll='0']) .socialBar{
+    text-align:right;
+    margin-right: 20px;
+  } */
+ 
+}
+
+.marker3D{
+  color:var(--matrix-primary);
+  position: absolute;
+  bottom: -2px;
+  margin-left:-3px;
+}
+
+.pin_card{
+  cursor: default;
+  z-index: 6;
+  pointer-events: none;
+  /* position: absolute; */
+  background-color: #000a;
+  padding: 10px;
+  /* padding-left: 3em; */
+  border-radius: 5px;
+  color: white;
+  width: max-content;
+  margin-top: calc(25% - 50px);
+  margin-left: auto;
+  margin-right: auto; 
+  font-family: neuro;
+  /* opacity: 0; */
+  /* transition: opacity 0.4s; */
+  /* background-image: linear-gradient(to left, #000, #000, #0000); */
+}
+
+/* .pin_card:hover{
+  cursor: pointer;
+  opacity: 1;
+  transition: opacity 0.2s;
+} */
+
+.map_marker{
+  opacity: 0;
+  position: absolute;
+  width: var(--marker-size);
+  height: var(--marker-size);
+  top:calc(var(--marker-size) * -0.5);
+  left:calc(var(--marker-size) * -0.5);
+  /* background-color: red;
+  z-index: 1000000 !important; */
+  background-image: radial-gradient(#fff 10%, #fff0 60%);
+}
+
+.map_marker:hover{
+  opacity: 1;
+  cursor: pointer;
+  transition: opacity 0.2s;
+}
+
+.timeline-demo .custom-marker {
+  display: flex;
+  width: 2rem;
+  height: 2rem;
+  align-items: center;
+  justify-content: center;
+  color: #ffffff;
+  border-radius: 50%;
+  z-index: 1;
+}
+
+.timeline-demo .p-timeline-event-content,
+.timeline-demo .p-timeline-event-opposite {
+  line-height: 1;
+}
+
+@media screen and (max-width: 960px) {
+  .hide_on_mobile{
+    display: none;
+  }
+  .timeline-demo .customized-timeline .p-timeline-event:nth-child(even) {
+      flex-direction: row !important;
+  }
+  .timeline-demo .customized-timeline .p-timeline-event:nth-child(even) .p-timeline-event-content {
+      text-align: left !important;
+  }
+  .timeline-demo .customized-timeline .p-timeline-event-opposite {
+      flex: 0;
+  }
+  
+}
+/* .timeline-demo .customized-timeline */
+.p-timeline-horizontal .p-timeline-event-separator{
+  position:relative;
+  z-index: 5;
+}
+.p-timeline-event-separator {
+  flex: 0 1;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  z-index: 4 !important;
+}
+
+.p-timeline .p-timeline-event-connector {
+  background-color: var(--matrix-secondary) !important;
+}
+
+.p-datatable .p-datatable-thead > tr > th {
+  text-align: left;
+  padding: 1rem 1rem;
+  border: 1px solid #383838;
+  border-width: 0 0 1px 0;
+  font-weight: 600;
+  color: var(--matrix-primary) !important;
+  background: #1e1e1e;
+  transition: box-shadow 0.2s;
+}
+
+.p-card {
+  position:relative;
+  margin-top: 1rem;
+  z-index: 5;
+}
+
+.p-toolbar {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  position: sticky !important;
+  top: 0px !important;
 }
