--- a/styles/globals.css
+++ b/styles/globals.css
@@ -105,9 +105,9 @@ p{
 
 .pin_card{
   cursor: default;
-  z-index: 6;
+  
   pointer-events: none;
-  /* position: absolute; */
+  position: relative;
   background-color: #000a;
   padding: 10px;
   /* padding-left: 3em; */
@@ -121,6 +121,7 @@ p{
   /* opacity: 0; */
   /* transition: opacity 0.4s; */
   /* background-image: linear-gradient(to left, #000, #000, #0000); */
+  z-index: 100 !important;
 }
 
 /* .pin_card:hover{
@@ -136,6 +137,7 @@ p{
   height: var(--marker-size);
   top:calc(var(--marker-size) * -0.5);
   left:calc(var(--marker-size) * -0.5);
+  z-index: 10;
   /* background-color: red;
   z-index: 1000000 !important; */
   background-image: radial-gradient(#fff 10%, #fff0 60%);
@@ -165,6 +167,7 @@ p{
   opacity: 1;
   cursor: pointer;
   transition: opacity 0.2s;
+  z-index: 10;
 }
 
 .timeline-demo .custom-marker {
