--- a/styles/globals.css
+++ b/styles/globals.css
@@ -21,7 +21,7 @@
 
 /* width */
 ::-webkit-scrollbar {
-  width: 3px;
+  width: 4px;
 }
 
 /* Track */
@@ -135,6 +135,15 @@ p{
     margin-right: 20px;
   } */
  
+}
+
+.grabbable {
+  cursor: move;
+  cursor: grab;
+}
+
+.grabbable:active {
+  cursor: grabbing;
 }
 
 .marker3D{
