--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,9 +1,16 @@
+.mix-blend-multiply {
+  mix-blend-mode: multiply
+}
 
+.mix-blend-color-dodge {
+  mix-blend-mode: color-dodge
+}
 
 .main {
-  /* min-height: 100vh; */
-  /* padding: 4rem 0; */
-  /* flex: 1; */
+  min-height: 100vh;
+  padding: 0px;
+  margin: 0px;
+  flex: 1;
   display: flex;
   /* flex-direction: column; */
   /* justify-content: center; */
