--- a/styles/globals.css
+++ b/styles/globals.css
@@ -61,6 +61,8 @@
 	--pixel-6: 10px;
 	--pixel-7: 15px;
 	--pixel-8: 20px;
+  --max-perspective: 1000px;
+  --transform-style: var(--transform-style);
 }
 
 /* clears all the style in the object */
@@ -129,6 +131,21 @@
 .horizontal-scrollbar::-webkit-scrollbar-thumb:hover {
   background: var(--transparent);
   background: linear-gradient(0deg, var(--transparent) 0%, var(--transparent) 39%, var(--matrix-primary) 40%, var(--matrix-primary) 60%, var(--transparent) 61%);
+}
+
+.custom-tooltip.p-tooltip  .p-tooltip-arrow {
+  display: none;
+  user-select: none ;
+}
+.custom-tooltip.p-tooltip .p-tooltip-text {
+  user-select: none ;
+  font-weight: bold;
+  border-radius: 50px;
+  background-color: #5557;
+  backdrop-filter: var(--blur-1);
+  padding: 0.5rem 1rem;
+  font-size: 15px;
+  text-transform: uppercase;
 }
 
 
@@ -217,7 +234,7 @@
 .yellow-tooltip.p-tooltip .p-tooltip-text {
   background-color: #0007 !important;
   border-radius: 10px;
-  backdrop-filter: blur(5px);
+  backdrop-filter: var(--blur-1);
 }
 .z-auto{
   z-index: auto !important;
@@ -249,8 +266,11 @@ a {
 }
 
 h3{
+  padding: 0.33rem;
+  width: 100%;
   text-align:center;
-  color:#228800
+  color:white;
+  text-transform: uppercase;
 }
 h2{
   color: white;
@@ -267,7 +287,7 @@ h5{
 }
 
 p{
-  color: var(--text);
+  color: var(--text-color);
   padding:10px;
   text-align: justify;
   text-justify:inter-cluster;
@@ -306,19 +326,19 @@ p{
 }
 
 .bg-blur-1{
-	backdrop-filter: blur(2px);
+	backdrop-filter: var(--blur-1);
 }
 
 .bg-blur-2{
-	backdrop-filter: blur(5px);
+	backdrop-filter: var(--blur-2);
 }
 
 .bg-blur-3{
-	backdrop-filter: blur(10px);
+	backdrop-filter: var(--blur-3);
 }
 
 .bg-blur-4{
-	backdrop-filter: blur(20px);
+	backdrop-filter: var(--blur-4);
 }
 .chat-bubble {
   cursor: pointer;
@@ -380,9 +400,14 @@ p{
   transition: opacity 0.3s;
   
 }
-.p-speeddial{
+/* .p-speeddial{
+  opacity: 0.3;
+  transition: opacity 333ms linear;
   pointer-events: none !important;
 }
+.p-speeddial:hover{
+  opacity: 1;
+} */
 
 .p-speeddial-button.p-button.p-button-icon-only {
   pointer-events: all !important;
@@ -390,7 +415,7 @@ p{
   height: 3rem !important;
   border:3px solid var(--matrix-primary) !important;
   background-color: #0007 !important;
-  backdrop-filter: blur(3px);
+  /* backdrop-filter: blur(3px); */
 }
 
 .bg-gradient-top{
@@ -418,13 +443,7 @@ p{
   margin-bottom: 10px;
 }
 
-@media only screen and (max-width: 500px) {
-  /* html:not([data-scroll='0']) .socialBar{
-    text-align:right;
-    margin-right: 20px;
-  } */
- 
-}
+
 
 main{
   width: 100%;
@@ -531,15 +550,18 @@ main{
   line-height: 1;
 }
 
-.show_on_mobile,
-.show_on_phone {
+.show-on-mobile,
+.show-on-phone {
   display: none;
 }
 @media screen and (max-width: 960px) {
-  .hide_on_mobile{
+  .parallax_bg{
+    transform: translate3d(-33%, 0, -300px) scale(2) !important;
+  }
+  .hide-on-mobile{
     display: none;
   }
-  .show_on_mobile {
+  .show-on-mobile {
     display: block;
   }
   .timeline-demo .customized-timeline .p-timeline-event:nth-child(even) {
@@ -552,6 +574,29 @@ main{
       flex: 0;
   }
   
+}
+
+@media only screen and (max-width: 500px) {
+  /* html:not([data-scroll='0']) .socialBar{
+    text-align:right;
+    margin-right: 20px;
+  } */
+  .hide-on-phone{
+    display: none;
+  }
+  .show-on-phone {
+    display: block;
+  }
+  .parallax_bg{
+    transform: translate3d(-33%, 0, -300px) scale(2) !important;
+  }
+  :root{
+    --blur-1: blur(0px);
+    --blur-2: blur(0px);
+    --blur-3: blur(0px);
+    --blur-4: blur(0px);
+    --max-perspective:1000px;
+  }
 }
 /* .timeline-demo .customized-timeline */
 .p-timeline-horizontal .p-timeline-event-separator{
@@ -616,7 +661,7 @@ main{
 }
 
 .form-control {
-  color:var(--text)!important;
+  color:var(--text-color)!important;
   background-color: var(--surface-a)!important;
   border: 1px solid var(--secondary-c)!important;
 }
@@ -645,9 +690,35 @@ main{
   min-height: max-content !important;
 }
 
+
+.p-dropdown-items-wrapper {
+  max-height: 80vh !important;
+  min-height: max-content !important;
+}
+
+.p-dropdown-items-wrapper::-webkit-scrollbar {
+	width: 5px;
+	height: 0px;
+}
+
+.p-dropdown-panel .p-dropdown-items .p-dropdown-item{
+  padding: 0px !important;
+  margin: 0px !important;
+}
+
 /* Default styles for all devices */
 .canvas {
   width: 10px !important;
+}
+.bitmap{
+  image-rendering: optimizeSpeed;             /* STOP SMOOTHING, GIVE ME SPEED  */
+  image-rendering: -moz-crisp-edges;          /* Firefox                        */
+  image-rendering: -o-crisp-edges;            /* Opera                          */
+  image-rendering: -webkit-optimize-contrast; /* Chrome (and eventually Safari) */
+  image-rendering: pixelated;                 /* Universal support since 2021   */
+  image-rendering: optimize-contrast;         /* CSS3 Proposed                  */
+  -ms-interpolation-mode: nearest-neighbor;   /* IE8+                           */
+
 }
 
 /* Styles for devices with high-resolution displays */
@@ -714,6 +785,21 @@ main{
   max-height: 100%;
   overflow: auto;
 }
+.expand {
+  width: min-content;
+  height: min-content;
+  /* background-color: blue; */
+  position: absolute; /*Can also be `fixed`*/
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+  /*Solves a problem in which the content is being cut when the div is smaller than its' wrapper:*/
+  max-width: 100%;
+  max-height: 100%;
+  overflow: auto;
+}
 
 /* 
 .min-600  {
@@ -737,19 +823,19 @@ main{
 };
 
 .page {
-  perspective:200px;
+  perspective: min(200px,var(--max-perspective));
   perspective-origin: center center;
 }
 
 .parallax{
   position: absolute;
-  transform-style: preserve-3d;
+  transform-style: var(--transform-style);
   overflow: hidden;
 }
 
 .parallax_bg {
   position: absolute;
-  transform-style: preserve-3d;
+  transform-style: var(--transform-style);
   /* height:120vh; */
   /* transform: rotateY(-40deg); */
   overflow: hidden;
@@ -761,14 +847,245 @@ main{
 .wrapper {
   /* height: 100svw; */
   /* width: 100%; */
-  overflow: scroll;
+  /* overflow: scroll; */
   /* overflow-x: hidden; */
-  perspective: 150px;
-  transform-style: preserve-3d;
+  perspective: min(150px,var(--max-perspective));
+  transform-style: var(--transform-style);
+}
+
+.card_wrapper {
+  /* height: 100svw; */
+  /* width: 100%; */
+  /* overflow: scroll; */
+  /* overflow-x: hidden; */
+  perspective: min(800px,var(--max-perspective));
+  transform-style: var(--transform-style);
   
 }
 
 .hover\:pi-spin:hover {
   -webkit-animation: fa-spin 2s infinite linear;
   animation: fa-spin 2s infinite linear;
+}
+
+#card_front,
+#card_back_x,
+#card_back_y {
+  color: var(--text);
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  border-radius: 15px;
+  transition: transform 666ms cubic-bezier(0.87, -0.41, 0.3, 1.44);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
+  overflow: hidden;
+  /* pointer-events: none; */
+  /* backdrop-filter: Blur(8px); */
+}
+
+#card_glow{
+  position: absolute;
+  z-index: 0;
+  width: 100%;
+  height: 100%;
+  perspective: min(800px,var(--max-perspective));
+  transform: rotateY(0deg) scale(1.06);
+  transition: transform 666ms cubic-bezier(0.87, -0.41, 0.3, 1.44);
+}
+
+#card_front {
+  background: var(--glass);
+  transform: rotateY(0deg);
+}
+
+#card_back_y {
+  /* backface-visibility: visible; */
+  background: var(--glass-d);
+  transform: rotateY(180deg);
+}
+
+#card_back_x {
+  /* backface-visibility: visible; */
+  background: var(--glass);
+  transform: rotateX(180deg);
+}
+
+#card_front:hover,
+#card_back:hover {
+  outline: 2px solid var(--info);
+}
+
+.rotate_front_3d {
+  transform: rotateY(180deg);
+}
+
+.rotate_back_3d {
+  transform: rotateY(0deg);
+}
+.p-inputtextarea {
+  /* padding: 10px !important; */
+  margin-bottom: 30px !important;
+}
+.chip-auto-complete > ul{
+  overflow-y: scroll;
+  /* max-height: 10rem; */
+  background-color: #0007;
+  width: 100%;
+  gap:5px;
+  /* margin-top: 40px !important; */
+  padding-block: 10px !important;
+}
+
+.chip-auto-complete > ul >li{
+  background-color: #2437 !important;
+  border-radius: 15px !important;
+  margin: 0px !important;
+}
+
+.chip-auto-complete > ul > li.p-autocomplete-input-token{
+  transition: all 100ms linear;
+  /* backdrop-filter: var(--blur-1); */
+  /* position: absolute;
+  top: 0px;
+  left: 0px; */
+  /* width: 100%; */
+  z-index: 2;
+  background-color: #000a !important;
+  outline: 1px solid #fff2;
+  padding-left: 10px !important;
+  padding-block: 8px !important;
+  min-width: fit-content;
+}
+.chip-auto-complete > ul > li.p-autocomplete-input-token:has(input:focus){
+  background-color: #000F !important;
+  outline: 2px solid var(--matrix-primary);
+}
+
+.chip-auto-complete > ul > li > .p-autocomplete-token-icon{
+  transition: color 200ms linear;
+  color: white;
+}
+.chip-auto-complete > ul > li > .p-autocomplete-token-icon:hover{
+  color: #c67474;
+}
+
+.inputText {
+  min-height: 100%  !important;
+}
+
+.title {
+  display: flex;
+  white-space: nowrap;
+  color: var(--text-color);
+  text-align: center;
+}
+
+.js-resize-sensor, .t-CardsRegion, .a-CardView-media, .a-TMV-w-scroll {
+  transition: all 300ms !important;
+  overflow: visible!important;
+}
+
+.ai-model-card > label{
+  font-weight: lighter;
+  font-size: large;
+  color: var(--bluegray-400);
+}
+
+.p-dialog-mask{
+  backdrop-filter: blur(10px)!important;
+}
+
+.readme-viewer{
+  max-width: 100vw;
+}
+
+.readme-viewer table > tbody{
+  min-width: 100% !important;
+}
+
+.readme-viewer table > tbody > tr{
+  background-color: #0007 !important;
+}
+
+.readme-viewer table > tbody > tr:nth-child(1){
+  background-color: #444A !important;
+}
+
+.readme-viewer table > tbody > tr > th, td{
+  /* max-width: 200px !important; */
+  width: max-content;
+  border: 1px solid #AAA4 !important;
+}
+
+table > tbody > tr > th, td > img{
+  max-width: 30vw;
+  /* margin: 10px !important; */
+}
+
+.p-message-wrapper > .p-message-icon{
+  /* color: #FFF !important; */
+  filter: brightness(2);
+}
+.p-message-wrapper > *{
+  color: #FFF ;
+}
+.p-message-wrapper{
+  background: #000C;
+  justify-content:center;
+  gap:5px;
+  width: 100% !important;
+}
+.p-message{
+  /* position: absolute; */
+  left: 0px;
+  margin-top: 0px !important;
+  justify-content:space-between;
+  width: 100vw !important;
+  max-width: 40rem;
+}
+
+.p-message-wrapper > button{
+  background: #0005!important;
+  /* color: #FFF !important; */
+  filter: brightness(2);
+  margin-left: 10px !important;
+}
+.p-message-wrapper > button:hover{
+  filter: brightness(3);
+  background: #000!important;
+}
+
+/* .p-dialog-footer{
+
+} */
+.p-dialog-content{
+  padding: 0px !important;
+}
+.p-tabview-nav-container{
+  background-color: var(--surface-card);
+  margin: 0px !important;
+  padding: 0px !important;
+  position: sticky !important;
+  top: 0px !important;
+  z-index: 2;
+}
+
+.p-tabview .p-tabview-nav li.p-highlight .p-tabview-nav-link{
+  background-color: var(--surface-ground) !important;
+  box-shadow: none !important;
+}
+
+.imaginy-galery-item{
+  transition: all 500ms !important;
+  /* filter: saturate(0.4); */
+  transform: scale(1);
+}
+
+.imaginy-galery-item:hover{
+  /* filter: saturate(1); */
+  transform: scale(1.3);
 }
