--- a/styles/raster.css
+++ b/styles/raster.css
@@ -1644,17 +1644,17 @@ color-scheme: light dark; /* both supported */
   mix-blend-mode: color-dodge;
   -webkit-mask-image: linear-gradient(rgba(255,255,255,0) 0%,rgba(255,255,255,0) 50%,rgb(255,255,255) 90%,rgba(255,255,255,0) 100%);
   mask-image: linear-gradient(rgba(255,255,255,0) 0%,rgba(255,255,255,0) 50%,rgb(255,255,255) 90%,rgba(255,255,255,0) 100%);
-  transform: perspective(300px) rotateX(70deg) translateZ(-500px) scaleX(2)
+  transform: perspective(800px) rotateX(70deg) translateZ(-500px) scaleX(2)
 }
 
 @media (max-width: 767px) {
   .hero-grid-wrap {
-      transform:perspective(300px) rotateX(70deg) translate3d(0,-150px,-500px) scaleX(2)
+      transform:perspective(300px) rotateX(70deg) translate3d(0,-150px,-500px) scaleX(4)
   }
 }
 
 .hero-grid {
-  background-image: linear-gradient(0deg,transparent 24.999%,#777 25%,#777 26.999%,transparent 27%,transparent 74.999%,#777 75%,#777 76.999%,transparent 77%,transparent),linear-gradient(90deg,transparent 24.999%,#777 25%,#777 26.999%,transparent 27%,transparent 74.999%,#777 75%,#777 76.999%,transparent 77%,transparent);
+  background-image: linear-gradient(0deg,transparent 24.999%,#CCC 25%,#CCC 26.999%,transparent 27%,transparent 74.999%,#CCC 75%,#CCC 76.999%,transparent 77%,transparent),linear-gradient(90deg,transparent 24.999%,#CCC 25%,#CCC 26.999%,transparent 27%,transparent 74.999%,#CCC 75%,#CCC 76.999%,transparent 77%,transparent);
   position: relative;
   z-index: 10;
   height: 110%;
@@ -4095,12 +4095,18 @@ color-scheme: light dark; /* both supported */
 
 
 .mix-blend-multiply {
-  mix-blend-mode: multiply
+  mix-blend-mode: multiply;
+}
+.mix-blend-add, .mix-blend-lighten {
+  mix-blend-mode: lighten;
+}
+.mix-blend-color-dodge {
+  mix-blend-mode: color-dodge;
+}
+.mix-blend-color-burn {
+  mix-blend-mode:color-burn;
 }
 
-.mix-blend-color-dodge {
-  mix-blend-mode: color-dodge
-}
 
 .shadow-\[0_20px_100px_-10px_rgba\(0\,0\,0\,0\.5\)\] {
   --tw-shadow: 0 20px 100px -10px rgba(0,0,0,.5);
