--- a/styles/globals.css
+++ b/styles/globals.css
@@ -42,9 +42,9 @@
 
   --icon-pallet-e:#5D00C7;
   --icon-pallet-f:#ffd000;
-  --glass:#3333;
-  --glass:#FFF2;
-  --glass-c:rgba(20, 4, 4, 0.133);
+  --glass-a:#3338;
+  --glass-b:#FFF8;
+  --glass-c:rgba(20, 4, 4, 0.5);
   --transparent: #0000;
   --pink-900:rgb(93, 12, 40);
   --gray-50:#697479;
@@ -95,6 +95,15 @@
 	height: 0px;
 }
 
+.glass-a {
+  background: var(--glass-a);
+}
+.glass-b {
+  background: var(--glass-b);
+}
+.glass-c {
+  background: var(--glass-c);
+}
 .p-10{
   padding: 150px;
 }
@@ -226,7 +235,7 @@
 
 .border-hover {
   color:var(--icon-pallet-b) !important;
-  border:2.2px solid var(--glass) !important;
+  border:2.2px solid var(--glass-a) !important;
   background-color: #0007 !important;
 }
 .border-hover:hover {
@@ -280,6 +289,7 @@ h3{
 }
 h2{
   color: white;
+  /* font-size: max(15px,min(3vw, 30px)); */
 }
 h4{
   margin-left: 10px;
@@ -335,7 +345,7 @@ p{
 	backdrop-filter: var(--blur-1);
 }
 
-.bg-blur-2{
+.bg-blur-2, .sm\:bg-blur-2{
 	backdrop-filter: var(--blur-2);
 }
 
@@ -414,6 +424,19 @@ p{
 .p-speeddial:hover{
   opacity: 1;
 } */
+
+.icon-only > .p-button-label {
+  display: none;
+}
+
+[class*="icon-only"] > .p-button-label.icon-only {
+  display: block;
+  margin: 0rem 0.5rem !important;
+}
+
+[class*="icon-only"] > .p-button-icon {
+  margin: 0.4rem 0.5rem !important;
+}
 
 .p-speeddial-button.p-button.p-button-icon-only {
   pointer-events: all !important;
@@ -579,7 +602,9 @@ main{
   .timeline-demo .customized-timeline .p-timeline-event-opposite {
       flex: 0;
   }
-  
+  .lg\:icon-only > .p-button-label {
+    display: none;
+  }
 }
 
 @media only screen and (max-width: 500px) {
@@ -591,8 +616,14 @@ main{
   .sm\:blur-2{
     filter: blur(10px);
   }
+  .sm\:bg-blur-2{
+    backdrop-filter: blur(10px);
+  }
   /* .blur-3 */
   /* .blur-4 */
+  .sm\:icon-only > .p-button-label {
+    display: none;
+  }
   .hide-on-phone{
     display: none;
   }
@@ -608,6 +639,18 @@ main{
     --blur-3: blur(0px);
     --blur-4: blur(0px);
     --max-perspective:1000px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .md\:hidden {
+    display: none;
+  }
+  .md\:visible {
+    display: block;
+  }
+  .md\:icon-only > .p-button-label {
+    display: none;
   }
 }
 /* .timeline-demo .customized-timeline */
@@ -960,7 +1003,7 @@ main{
 }
 
 #card_front {
-  background: var(--glass);
+  background: var(--glass-a);
   transform: rotateY(0deg);
 }
 
@@ -972,7 +1015,7 @@ main{
 
 #card_back_x {
   /* backface-visibility: visible; */
-  background: var(--glass);
+  background: var(--glass-a);
   transform: rotateX(180deg);
 }
 
@@ -1077,7 +1120,7 @@ main{
   background-color: #444A !important;
 }
 
-.readme-viewer table > tbody > tr > th, td{
+.readme-viewer table > tbody > tr > th, .readme-viewer td{
   /* max-width: 200px !important; */
   width: max-content;
   border: 1px solid #AAA4 !important;
@@ -1150,4 +1193,14 @@ table > tbody > tr > th, td > img{
 .imaginy-galery-item:hover{
   /* filter: saturate(1); */
   transform: scale(1.3);
+}
+
+.p-datepicker-mask{
+  display: none;
+}
+
+.blur-load{
+  background-size: cover;
+  background-position: center;
+  width: 100%;
 }
